# audiotools-cli

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  info.txt  refactoring_plan_independent_projects.md  spectrum_refactoring_plan.md  test_convert.rs  test_rodio.rs  test_symphonia.rs  update_convert_cli.sh
.jules/: bolt.md
crates/convert-cli/: Cargo.toml
crates/convert-cli/src/: main.rs  main.rs.patch  node.rs
crates/convert-cli/src/utils/: detection.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  config.rs  dsp.rs  lib.rs
crates/core/src/pipeline/: io.rs  mod.rs
crates/features-cli/: Cargo.toml
crates/features-cli/src/: features.rs  lib.rs  main.rs  node.rs
crates/info-cli/: Cargo.toml
crates/info-cli/src/: main.rs  node.rs
crates/info-cli/src/utils/: ffprobe.rs  mod.rs  wave_header.rs
crates/loudness-cli/: Cargo.toml
crates/loudness-cli/src/: main.rs  node.rs
crates/normalize-cli/: Cargo.toml
crates/normalize-cli/src/: lib.rs  main.rs  node.rs
crates/normalize-cli/src/command/: convert.rs
crates/normalize-cli/src/utils/: detection.rs
crates/pca-cli/: Cargo.toml
crates/pca-cli/src/: main.rs  node.rs
crates/pipeline-cli/: Cargo.toml
crates/pipeline-cli/src/: main.rs
crates/segment-cli/: Cargo.toml
crates/segment-cli/src/: lib.rs  main.rs  node.rs  segmenter.rs
crates/spectrum-cli/: Cargo.toml
crates/spectrum-cli/benches/: spectrum_bench.rs
crates/spectrum-cli/src/: README.md  error.rs  lib.rs  main.rs  mod.rs  node.rs
crates/spectrum-cli/src/command/: mod.rs
crates/spectrum-cli/src/core/: mod.rs
crates/spectrum-cli/src/core/analysis/: fft.rs  mod.rs
crates/spectrum-cli/src/core/audio/: mod.rs  processor.rs
crates/spectrum-cli/src/core/config/: builder.rs  mod.rs  presets.rs  validator.rs
crates/spectrum-cli/src/domain/: frequency.rs  mod.rs  request.rs  spectrogram.rs
crates/spectrum-cli/src/render/: annotations.rs  colormap.rs  mod.rs
crates/spectrum-cli/src/testing/: fixtures.rs  integration.rs  mocks.rs  mod.rs
crates/spectrum-cli/src/utils/: detection.rs  mod.rs
crates/waveform-cli/: Cargo.toml
crates/waveform-cli/src/: main.rs  node.rs
crates/waveform-cli/src/utils/: detection.rs  mod.rs  time.rs
src/: main.rs
src/command/spectrum/: config.rs  error.rs  fft.rs  mod.rs
src/command/spectrum/command/: mod.rs
src/command/spectrum/core/: mod.rs
src/command/spectrum/core/analysis/: fft.rs  mod.rs  windowing.rs
src/command/spectrum/core/audio/: mod.rs  processor.rs
src/command/spectrum/core/config/: builder.rs  mod.rs  presets.rs  validator.rs
src/command/spectrum/domain/: audio_data.rs  frequency.rs  mod.rs  request.rs  spectrogram.rs
src/command/spectrum/render/: annotations.rs  mod.rs
src/command/spectrum/testing/: mod.rs
src/utils/: time.rs
test_comparison/: compare_improvements.rs  debug_spectrum.rs
