[workspace]
members = ["crates/spectrum-cli", "crates/convert-cli", "crates/info-cli"]

[package]
name = "audiotools"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
hound = "3.5.1"
num-complex = "0.4.6"
plotters = "0.3.7"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
rand = "0.8"
