[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/spectrum-cli",
    "crates/convert-cli",
    "crates/info-cli",
    "crates/loudness-cli",
    "crates/normalize-cli",
    "crates/waveform-cli",
    "crates/segment-cli",
    "crates/features-cli",
    "crates/pca-cli", "crates/pipeline-cli",
]
