[package]
name = "features-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hound = "3.5"
rodio = "0.19"
rustfft = "6.2"
ndarray = "0.15"
# serde for JSON/CSV output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
indicatif = "0.17"
walkdir = "2.5"
audiotools-core = { version = "0.1.0", path = "../core" }

[dev-dependencies]
tempfile = "3.10"
