[package]
name = "loudness-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
audiotools-core = { path = "../core" }
symphonia = { version = "0.5.5", features = ["all"] }
ebur128 = "0.1.10"
anyhow = "1.0.102"

[lib]
name = "loudness_cli"
path = "src/lib.rs"
