[package]
name = "pca-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
# linfa = { version = "0.6", features = [] } 
# linfa-pca = "0.6"
# linfa-preprocessing = "0.6"
# Note: linfa is a bit heavy, let's try with linfa-pca.
# Check if we can use linfa. For now assume yes or use smartcore.
# Let's try linfa.
# linfa was problematic with missing crates
smartcore = "0.4.9"
plotters = "0.3"
audiotools-core = { path = "../core" }

[lib]
name = "pca_cli"
path = "src/lib.rs"
