[package]
name = "segment-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hound = "3.5"
rodio = "0.19"
rustfft = "6.2"
ndarray = "0.15"
num-complex = "0.4"
walkdir = "2.5"
indicatif = "0.17" # For progress bar like tqdm

audiotools-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "segment_cli"
path = "src/lib.rs"
