[package]
name = "spectrum-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
hound = "3.5.1"
num-complex = "0.4.6"
plotters = "0.3.7"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
rand = "0.8"
audiotools-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spectrum_bench"
harness = false
