[package]
name = "waveform-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
hound = "3.5.1"
plotters = "0.3.7"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
rodio = "0.20.1"
audiotools-core = { path = "../core" }
